* decoupling classes by abstracting away the bussiness layer from redux actions, and abstracting the fetching of posts to a separate wordpress service

--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -4,7 +4,7 @@ services:
    db:
      image: mysql:5.7
      volumes:
-       - db_data:/var/lib/mysql
+       - ./db_data:/db_data
      restart: always
      environment:
        MYSQL_ROOT_PASSWORD: somewordpress
@@ -25,4 +25,4 @@ services:
        WORDPRESS_DB_PASSWORD: wordpress
        WORDPRESS_DB_NAME: wordpress
 volumes:
-    db_data: {}
+    db_data: 
