--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.9",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
@@ -15,7 +19,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
