--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^14.11.9",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
