--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "github:testing-library/user-event",
+    "@types/react-redux": "^7.1.11",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "react-test-renderer": "^16.13.1"
