--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.11.9",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "github:testing-library/user-event",
+    "@types/enzyme": "^3.10.8",
     "@types/react-redux": "^7.1.11",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
